# ffmpeg-playground

./: CMakeLists.txt  Dockerfile  build_docker.sh  run_docker.sh
cmake/: FindFFmpeg.cmake
src/: decoder_h264_x264.cpp  encoder.cpp  encoder_h264_qsv.cpp  encoder_h264_x264.cpp
